config/objects/Profit_Share_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Profit Share Payments</relationshipLabel>
        <relationshipName>Profit_Share_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Profit Share Payment</label>
    <nameField>
        <label>Profit Share Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profit Share Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>